# colx

./: .pre-commit-config.yaml  Cargo.toml  README.md  plan.md
.github/: dependabot.yml
.github/workflows/: dependabot_validation.yml  pull_request.yml  release.yml  rust_publish.yml  rust_pull_request.yml  rust_release.yml  rust_security_audit.yml
src/: main.rs
testdata/: file3  file_with_empty_columns
tests/: cli.rs
