[package]
name = "colx"
version = "1.0.2"
edition = "2024"

# keep-sorted start
categories = ["command-line-utilities"]
description = "Extract the specified columns from FILES or stdin."
keywords = ["cli", "text"]
license = "Apache-2.0"
repository = "https://github.com/tobinjt/colx"
# keep-sorted end

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
regex = "1.11.0"
