[package]
name = "colx"
version = "1.0.5"
edition = "2024"

# keep-sorted start
categories = ["command-line-utilities"]
description = "Extract the specified columns from FILES or stdin."
keywords = ["cli", "text"]
license = "Apache-2.0"
repository = "https://github.com/tobinjt/colx"
# keep-sorted end

[dependencies]
clap = { version = "4.6.2", features = ["derive"] }
regex = "1.13.1"

[dev-dependencies]
assert_cmd = "2.2.2"
predicates = "3.1.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
